# IDIA

./: README.md  pyproject.toml
idia/: __init__.py  bl_manager.py  config.py  idiaApp.py  kb_extraction.py  prompts.py
running-example/: RunningExample.docx
