[tool.poetry]
name = "IDIA"
version = "0.1.0"
description = ""
authors = ["Gabriele De Vito <gabriele.devito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
streamlit = "^1.22.0"
pygithub = "^1.58.2"
redis = "^4.5.5"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
arrow = "^1.2.3"
gitpython = "^3.1.31"
unstructured = "^0.6.8"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
langchain = "0.0.174"
lark = "^1.1.5"
pinecone-client = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
